# libmgx

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
inc/: mgx.h  mgx_free.h  mgx_libs.h  mgx_mlx.h  mgx_mlx_s.h  mgx_struct.h  mlx_full.h
include/: mgx.h  mgx_base_s.h  mgx_input.h  mgx_struct.h
src/: mgx_free.c  mgx_init.c  mgx_lib_mlx.c  mgx_loop.c
src/buf/: mgx_buf.c  mgx_buf_draw_line.c
src/liner/: main.c
src/win/: mgx_win_buf.c  mgx_win_draw.c  mgx_win_init.c
